test/tests/compiler/18_structures/invalid_lex/return_0.etc
pub fn return_0(none) i32 {
    return 0
}
